2008-11-18  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * src/calendar/base/content/sun-calendar-event-dialog.js
	 src/patches/464444.diff
	 new files in order to fix the issue (bug #464444) where
	 the last attendee wouldn't be notified when he was
	 removed from the list of invited attendees
	* Bumped the version number to 0.9.0pre3

2008-11-16  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Improved the speed of the SAX handler in
	calDavCalendar.js b avoiding calls to ensurePath()

2008-11-14  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Added a Linux/64-bit Lightning build
	* Changed the version number to 0.9.1pre2
	* Fixed bug #463960

2008-11-12  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Added src/patches/454543.diff for bug #454543
	  Included the fix in the source code and
	  slightly modified it (replaced let = with var=)

2008-11-11  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Fixed bug #464344
	* Added binaries/lightning/saxparser.xpt to the
	  Lightning/win32 build in order to get a working
	  SAX parser on this platform
	* Changed the version number to 0.9.1pre1

2008-11-10  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Modified calDavCalendar.js
	- added a fast etag parser
	- re-implemented getInvitedAttendee so it takes
	  into account all identities
	- modified the delete method to proceed with the
	  delete even with 404 error codes from the server
	- added patch from bug #342934
	
2008-11-10  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Initial import of Mozilla Calendar source and binaries.
	The import is based on the last stable release for
	Thunderbird 2 - which is 0.9.
	* Generation of the initial set of patches in
	  src/patches